--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>White City — 2D Flow Experience</title>
+<title>[edge] - 2D experience</title>
 <style>
   :root{
     --bg:#FAFAFA; --shadow:#E9EDF1; --line:#2A2F35; --lineSoft:#2A2F35AA;
